examples/kubernetes-ingress/deployments/guestbook/ingress/1-nginx-ingress-controller-rbac.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
