examples/kubernetes-ingress/deployments/guestbook/ingress/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
  namespace: nginx-ingress
spec:
  template:
    metadata:
      labels:
        name: nginx-ingress-controller
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      hostNetwork: true
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.12
        imagePullPolicy: Always
        name: nginx-ingress
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        volumeMounts:
          - name: nginx-run
            mountPath: /var/lib/nginx
        securityContext:
          capabilities:
            add:
              - "NET_ADMIN"
          privileged: true
        args:
         - /nginx-ingress-controller
         - --kubeconfig=/var/lib/nginx/nginx.kubeconfig
         - --default-ssl-certificate=$(POD_NAMESPACE)/default-server-secret
         - --configmap=default/nginx-config
         - --default-backend-service=$(POD_NAMESPACE)/nginx-ingress
      volumes:
        - name: nginx-run
          hostPath:
            path: /var/lib/nginx
