examples/kubernetes-ingress/deployments/guestbook/ingress/nginx-ingress-controller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
# Can also use LoadBalancer type
  type: NodePort
  ports:
  - name: http
    port: 8080
    nodePort: 30080
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: nginx-ingress-lb
