examples/kubernetes-ingress/deployments/guestbook/ingress/guestbook-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  backend:
    serviceName: guestbook
    servicePort: 80
